--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -27,3 +27,10 @@
   place-items: center;
   min-height: 260px;
 }
+
+@media screen and (min-width:426px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
