--- a/src/Details/Details.css
+++ b/src/Details/Details.css
@@ -50,6 +50,18 @@ h3 {
 }
 
 
-@media screen {
-  
-}
+
+
+/* 
+@media screen and (min-width: 400px) {
+  .row-container {
+    max-width: 1200px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    margin: 0%;
+    padding: 0%;
+  }
+
+} */
