--- a/src/Navbars/Navbar.css
+++ b/src/Navbars/Navbar.css
@@ -2,6 +2,7 @@
   min-width: 100%;
   display: flex;
   justify-content: space-between;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .bg-body-tertiary {
