--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -9,7 +9,8 @@
 
 .container {
   min-width: 100%;
-  padding-top: 20px;
+  padding-bottom: 10px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .p-Tag {
